// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button  1`] = `
.emotion-0 {
  border-width: 1px;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 700;
  line-height: 18px;
  margin: 0;
  overflow: hidden;
  padding: 8px 16px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: #0696d7;
}

.emotion-0:visited {
  color: #ffffff;
}

.emotion-0 svg * {
  fill: #f5f5f5;
}

<button
  className="emotion-0"
  disabled={false}
  href={undefined}
  onBlur={[Function]}
  onClick={undefined}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={undefined}
  onMouseUp={[Function]}
  tabIndex="0"
  target={undefined}
>
  <span>
    Settings
  </span>
</button>
`;

exports[`Button  2`] = `
.emotion-0 {
  border-width: 1px;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 700;
  line-height: 18px;
  margin: 0;
  overflow: hidden;
  padding: 8px 16px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: #0696d7;
}

.emotion-0:visited {
  color: #ffffff;
}

.emotion-0 svg * {
  fill: #f5f5f5;
}

<button
  className="emotion-0"
  disabled={false}
  href={undefined}
  onBlur={[Function]}
  onClick={undefined}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={undefined}
  onMouseUp={[Function]}
  tabIndex="0"
  target={undefined}
>
  <span>
    Settings
  </span>
</button>
`;

exports[`Button  3`] = `
.emotion-0 {
  border-width: 1px;
  border-style: solid;
  border-color: rgb(190,200,210);
  border-radius: 4px;
  box-sizing: border-box;
  color: #000000;
  cursor: pointer;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 700;
  line-height: 18px;
  margin: 0;
  overflow: hidden;
  padding: 8px 16px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: none;
}

.emotion-0:visited {
  color: #000000;
}

.emotion-0 svg * {
  fill: #000000;
}

<button
  className="emotion-0"
  disabled={false}
  href={undefined}
  onBlur={[Function]}
  onClick={undefined}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={undefined}
  onMouseUp={[Function]}
  tabIndex="0"
  target={undefined}
>
  <span>
    Settings
  </span>
</button>
`;

exports[`Button  4`] = `
.emotion-0 {
  border-width: 1px;
  border-style: solid;
  border-color: rgba(255,255,255,0);
  border-radius: 4px;
  box-sizing: border-box;
  color: #000000;
  cursor: pointer;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 700;
  line-height: 18px;
  margin: 0;
  overflow: hidden;
  padding: 8px 16px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: none;
}

.emotion-0:visited {
  color: #000000;
}

.emotion-0 svg * {
  fill: #000000;
}

<button
  className="emotion-0"
  disabled={false}
  href={undefined}
  onBlur={[Function]}
  onClick={undefined}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={undefined}
  onMouseUp={[Function]}
  tabIndex="0"
  target={undefined}
>
  <span>
    Settings
  </span>
</button>
`;

exports[`Button  5`] = `
.emotion-1 {
  border-width: 1px;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 700;
  line-height: 18px;
  margin: 0;
  overflow: hidden;
  padding: 8px 16px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: #0696d7;
}

.emotion-1:visited {
  color: #ffffff;
}

.emotion-1 svg * {
  fill: #f5f5f5;
}

.emotion-0 {
  display: inline-block;
  position: relative;
  height: 24px;
  vertical-align: middle;
  margin-right: 4px;
  margin-bottom: 1px;
}

<button
  className="emotion-1"
  disabled={false}
  href={undefined}
  onBlur={[Function]}
  onClick={undefined}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={undefined}
  onMouseUp={[Function]}
  tabIndex="0"
  target={undefined}
>
  <span
    className="emotion-0"
  >
    &lt;Icon /&gt;
  </span>
  <span>
    Settings
  </span>
</button>
`;

exports[`Button  6`] = `
.emotion-0 {
  border-width: 1px;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 700;
  line-height: 18px;
  margin: 0;
  overflow: hidden;
  padding: 8px 16px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: #0696d7;
}

.emotion-0:visited {
  color: #ffffff;
}

.emotion-0 svg * {
  fill: #f5f5f5;
}

<a
  className="emotion-0"
  disabled={false}
  href="https://hig.autodesk.com"
  onBlur={[Function]}
  onClick={undefined}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={undefined}
  onMouseUp={[Function]}
  tabIndex="0"
  target={undefined}
>
  <span>
    Settings
  </span>
</a>
`;
